fix: Make sure newsroll illustrations “bleed”

--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -55,16 +55,8 @@ body.home {
             display: block;
             width: 155px;
             overflow: hidden;
-
-            img {
-              display: block;
-              width: 300px;
-              height: auto;
-              position: absolute;
-              top: 50%;
-              left: 50%;
-              transform: translateY(-50%) translateX(-50%);
-            }
+            background-size: cover;
+            background-position: center center;
           }
         }
 
